增加GO电机控制协议

--- a/MDK-ARM/test.uvprojx
+++ b/MDK-ARM/test.uvprojx
@@ -490,6 +490,16 @@
               <FileType>1</FileType>
               <FilePath>../Core/Src/stm32f4xx_hal_timebase_tim.c</FilePath>
             </File>
+            <File>
+              <FileName>gom_protocol.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\gom_protocol.c</FilePath>
+            </File>
+            <File>
+              <FileName>crc_ccitt.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\crc_ccitt.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
