找到还凑合的kpkw

--- a/MDK-ARM/showdata.ini
+++ b/MDK-ARM/showdata.ini
@@ -2,7 +2,7 @@ FUNC void showdata(void){
 	int idx;
 	exec("log > data_go.log");
 	for(idx=0;idx<501;idx++){
-		printf("%f %f\n",error_buf0[error_idx].pos_error,error_buf0[error_idx].vel_error);
+		printf("%f %f\n",error_buf0[idx].pos_error,error_buf0[idx].vel_error);
 	}
 	exec("log off");
 }
